--- a/examples/screenshots/layout-responsive.html
+++ b/examples/screenshots/layout-responsive.html
@@ -121,19 +121,27 @@
         <!-- Sidebar (Left) -->
         <div class="rs-main">
           <div class="rs-sidebar">
-            <div class="rs-inner"></div>
+            <div class="rs-inner">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, vitae, nisi, rem, deserunt laudantium voluptatem repellat quas voluptatibus quaerat ad aliquam placeat impedit enim voluptate maiores fuga consequatur suscipit quidem.
+            </div>
           </div>
           <div class="rs-content rs-panel">
-            <div class="rs-inner"></div>
+            <div class="rs-inner">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, vitae, nisi, rem, deserunt laudantium voluptatem repellat quas voluptatibus quaerat ad aliquam placeat impedit enim voluptate maiores fuga consequatur suscipit quidem.
+            </div>
           </div>
         </div>
         <!-- Sidebar (Left, Panel) -->
         <div class="rs-main rs-panel">
           <div class="rs-sidebar">
-            <div class="rs-inner"></div>
+            <div class="rs-inner">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, vitae, nisi, rem, deserunt laudantium voluptatem repellat quas voluptatibus quaerat ad aliquam placeat impedit enim voluptate maiores fuga consequatur suscipit quidem.
+            </div>
           </div>
           <div class="rs-content rs-panel">
-            <div class="rs-inner"></div>
+            <div class="rs-inner">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, vitae, nisi, rem, deserunt laudantium voluptatem repellat quas voluptatibus quaerat ad aliquam placeat impedit enim voluptate maiores fuga consequatur suscipit quidem.
+            </div>
           </div>
         </div>
         <!-- Sidebar (Right) -->
@@ -142,10 +150,14 @@
         </div>
         <div class="rs-main">
           <div class="rs-sidebar rs-pull-right">
-            <div class="rs-inner"></div>
+            <div class="rs-inner">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, vitae, nisi, rem, deserunt laudantium voluptatem repellat quas voluptatibus quaerat ad aliquam placeat impedit enim voluptate maiores fuga consequatur suscipit quidem.
+            </div>
           </div>
           <div class="rs-content rs-panel">
-            <div class="rs-inner"></div>
+            <div class="rs-inner">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, vitae, nisi, rem, deserunt laudantium voluptatem repellat quas voluptatibus quaerat ad aliquam placeat impedit enim voluptate maiores fuga consequatur suscipit quidem.
+            </div>
           </div>
         </div>
         <!-- Sidebar (Right, Panel) -->
@@ -154,10 +166,14 @@
         </div>
         <div class="rs-main rs-panel">
           <div class="rs-sidebar rs-pull-right">
-            <div class="rs-inner"></div>
+            <div class="rs-inner">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, vitae, nisi, rem, deserunt laudantium voluptatem repellat quas voluptatibus quaerat ad aliquam placeat impedit enim voluptate maiores fuga consequatur suscipit quidem.
+            </div>
           </div>
           <div class="rs-content rs-panel">
-            <div class="rs-inner"></div>
+            <div class="rs-inner">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, vitae, nisi, rem, deserunt laudantium voluptatem repellat quas voluptatibus quaerat ad aliquam placeat impedit enim voluptate maiores fuga consequatur suscipit quidem.
+            </div>
           </div>
         </div>
         <!-- Full-Width Content -->
@@ -165,7 +181,11 @@
           <a href="#">&lsaquo; Back to List</a>
         </div>
         <div class="rs-main">
-          <div class="rs-content rs-panel"></div>
+          <div class="rs-content rs-panel">
+            <div class="rs-inner">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, vitae, nisi, rem, deserunt laudantium voluptatem repellat quas voluptatibus quaerat ad aliquam placeat impedit enim voluptate maiores fuga consequatur suscipit quidem.
+            </div>
+          </div>
         </div>
       </div>
       <!-- Grid -->
