updated screenshots and error processing colors

--- a/examples/screenshots/status.html
+++ b/examples/screenshots/status.html
@@ -15,6 +15,7 @@
       <span class="rs-status rs-status-ok">OK</span>
       <span class="rs-status rs-status-warning">Warning</span>
       <span class="rs-status rs-status-error">Error</span>
+      <span class="rs-status rs-status-processing-error">Processing Error</span>
       <span class="rs-status rs-status-disabled">Disabled</span>
       <span class="rs-status rs-status-processing">Processing</span>
       <span class="rs-status rs-status-processing-ok">Processing OK</span>
@@ -27,6 +28,7 @@
       <span class="rs-status-disabled">Disabled</span>
       <span class="rs-status-processing">Processing</span>
       <span class="rs-status-processing-ok">Processing OK</span>
+      <span class="rs-status-processing-error">Processing Error</span>
     </p>
   </body>
 </html>
