updated screenshots and error processing colors

--- a/examples/screenshots/list-table.html
+++ b/examples/screenshots/list-table.html
@@ -612,7 +612,7 @@
             <td class="rs-table-text"><button type="button" class="rs-plus"></button></td>
           </tr>
           <tr>
-            <td class="rs-table-status rs-table-status-error"></td>
+            <td class="rs-table-status rs-table-status-striped rs-table-status-error"></td>
             <td class="rs-table-checkbox"></td>
             <td class="rs-table-cog"></td>
             <td class="rs-table-radio"></td>
