--- a/examples/demos/detail.html
+++ b/examples/demos/detail.html
@@ -116,7 +116,7 @@
         <div class="rs-back-link">
           <a href="./index.html">&lsaquo; Back to List</a>
         </div>
-        <div class="rs-main">
+        <div class="rs-main rs-panel">
           <div class="rs-sidebar rs-pull-right">
             <div class="rs-inner">
               <h3>Managing Your Server</h3>
