adding pre styles to sidebar

--- a/examples/demos/detail.html
+++ b/examples/demos/detail.html
@@ -122,7 +122,7 @@
               <h3>Managing Your Server</h3>
               <h4>Log into your server now</h4>
               <p>For Linux, use the command below to log in via SSH. Open a terminal application and run:</p>
-              <p><a href="">ssh root@101.122.44.211</a></p>
+              <p><pre><a href="">ssh root@101.122.44.211</a></pre></p>
               <p><a target="blank" href="http://www.rackspace.com/knowledge_center/article/remote-login-procedures">More Remote Login Commands »</a></p>
               <hr>
               <h4>Help Me With...</h4>
