updating link text

--- a/examples/demos/detail.html
+++ b/examples/demos/detail.html
@@ -145,7 +145,7 @@
               <ul>
                 <li><a target="blank" href="https://cloudtools.rackspace.com/apps/519?1166395936">Security: Cloud Passage Halo</a></li>
                 <li><a target="blank" href="https://cloudtools.rackspace.com/apps/263?427121319">Management: RightScale</a></li>
-                <li><a target="blank" href="https://cloudtools.rackspace.com/apps/347?2015636109">Application Monitoring: New Relic</a></li>
+                <li><a target="blank" href="https://cloudtools.rackspace.com/apps/347?2015636109">App Monitoring: New Relic</a></li>
               </ul>
               <p><a target="blank" href="https://cloudtools.rackspace.com/home">Visit the Cloud Tools Marketplace »</a></p>
             </div>
