adding pre code styles

--- a/examples/screenshots/typography.html
+++ b/examples/screenshots/typography.html
@@ -33,7 +33,11 @@
   quis nostrud exercitation <em>ullamco laboris nisi</em> ut aliquip ex ea commodo
   consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
   cillum <a href="#">dolore eu fugiat nulla</a> pariatur. Excepteur sint occaecat cupidatat non
-  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Minus, inventore ratione velit iste earum quas <code>sunt necessitatibus</code> quos dolorum distinctio minima optio itaque.</p>
+  <pre><code>$ git clone https://github.com/rackerlabs/canon.git
+$ script/bootstrap
+$ grunt server</code></pre>
+  <p>lorem</p>
   <ol>
     <li>One</li>
     <li>
