fixing lorem text

--- a/examples/screenshots/typography.html
+++ b/examples/screenshots/typography.html
@@ -37,7 +37,7 @@
   <pre><code>$ git clone https://github.com/rackerlabs/canon.git
 $ script/bootstrap
 $ grunt server</code></pre>
-  <p>lorem</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, atque explicabo voluptate soluta quibusdam distinctio perferendis error ab. Repudiandae, quasi quidem aliquid ab dolorum. Dolorum ex dolores asperiores incidunt deleniti.</p>
   <ol>
     <li>One</li>
     <li>
