--- a/html/demos/index.html
+++ b/html/demos/index.html
@@ -57,9 +57,120 @@ statuses:
 ---
 
 <div class="rs-main">
-  <div class="rs-content rs-panel">
+  <div class="rs-sidebar rs-facets">
     <div class="rs-inner">
       <h2 class="rs-page-title">Cloud Servers</h2>
+
+      <div class="rs-facet-section-title">
+        <i class="rs-facet-checkbox checked"></i> All Servers <div class="rs-facet-count">(37)</div>
+      </div>
+
+      <!-- example with divs -->
+      <div class="rs-facet-section">
+        <div class="rs-facet-section-title">Icon Example</div>
+        <div class="rs-facet-section-body">
+          <div class="rs-facet-list">
+            <div class="rs-facet-item">
+              <i class="rs-facet-checkbox"></i>
+              <i class="rs-status-error"></i>
+              <div class="rs-facet-label">this is a truncated label example</div>
+              <div class="rs-facet-count">(12k)</div>
+            </div>
+            <div class="rs-facet-item">
+              <i class="rs-facet-checkbox"></i>
+              <i class="rs-status-error"></i>
+              <div class="rs-facet-label">Error</div>
+              <div class="rs-facet-count">(2)</div>
+            </div>
+            <div class="rs-facet-item">
+              <i class="rs-facet-checkbox"></i>
+              <i class="rs-status-ok"></i>
+              <div class="rs-facet-label">Active</div>
+              <div class="rs-facet-count">(33)</div>
+            </div>
+            <div class="rs-facet-item">
+              <i class="rs-facet-checkbox"></i>
+              <i class="rs-status-warning"></i>
+              <div class="rs-facet-label">Rebooting</div>
+              <div class="rs-facet-count">(2)</div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Example Facet List Small -->
+      <div class="rs-facet-section rs-facet-section-small">
+        <div class="rs-facet-section-title">Section Small - Default</div>
+        <div class="rs-facet-section-body">
+          <ul class="rs-facet-list">
+            <li class="rs-facet-item">
+              <i class="rs-facet-checkbox"></i>
+              <div class="rs-facet-label">this is a truncated label example</div>
+              <div class="rs-facet-count">(11)</div>
+            </li>
+            <li class="rs-facet-item">
+              <i class="rs-facet-checkbox"></i>
+              <div class="rs-facet-label">monitor</div>
+              <div class="rs-facet-count">(8)</div>
+            </li>
+            <li class="rs-facet-item">
+              <i class="rs-facet-checkbox"></i>
+              <div class="rs-facet-label">production</div>
+              <div class="rs-facet-count">(12)</div>
+            </li>
+            <li class="rs-facet-item">
+              <i class="rs-facet-checkbox"></i>
+              <div class="rs-facet-label">LUg</div>
+              <div class="rs-facet-count">(6)</div>
+            </li>
+            <li class="rs-facet-item">
+              <i class="rs-facet-checkbox"></i>
+              <div class="rs-facet-label">staging</div>
+              <div class="rs-facet-count">(11)</div>
+            </li>
+            <li class="rs-facet-item">
+              <i class="rs-facet-checkbox"></i>
+              <div class="rs-facet-label">QE</div>
+              <div class="rs-facet-count">(8)</div>
+            </li>
+            <li class="rs-facet-item">
+              <i class="rs-facet-checkbox"></i>
+              <div class="rs-facet-label">design</div>
+              <div class="rs-facet-count">(12)</div>
+            </li>
+            <li class="rs-facet-item">
+              <i class="rs-facet-checkbox"></i>
+              <div class="rs-facet-label">billing</div>
+              <div class="rs-facet-count">(6)</div>
+            </li>
+            <li class="rs-facet-item">
+              <i class="rs-facet-checkbox"></i>
+              <div class="rs-facet-label">utiliy</div>
+              <div class="rs-facet-count">(3)</div>
+            </li>
+            <li class="rs-facet-item">
+              <i class="rs-facet-checkbox"></i>
+              <div class="rs-facet-label">comms</div>
+              <div class="rs-facet-count">(8)</div>
+            </li>
+            <li class="rs-facet-item">
+              <i class="rs-facet-checkbox"></i>
+              <div class="rs-facet-label">marketing</div>
+              <div class="rs-facet-count">(8)</div>
+            </li>
+            <li class="rs-facet-item">
+              <i class="rs-facet-checkbox"></i>
+              <div class="rs-facet-label">sales</div>
+              <div class="rs-facet-count">(8)</div>
+            </li>
+          </ul>
+          <div class="rs-facet-section-toggle"><i class="rs-arrow"></i> more</div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="rs-content rs-panel">
+    <div class="rs-inner">
       <div class="rs-btn-group">
         <a href="create.html" class="rs-btn rs-btn-primary">Create Server</a>
         <button class="rs-btn" disabled>Delete</button>
