updating connect static site options and updating demo to use new url

--- a/html/demos/auto_scale_list.html
+++ b/html/demos/auto_scale_list.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: demos
 title: Auto Scale
 servers:
   1:
@@ -79,7 +79,7 @@ servers:
                   </ul>
                 </div>
               </td>
-              <td class="rs-table-link"><a href="{{ site.baseurl }}/auto_scale_details.html">{{ server[1].name }}</a></td>
+              <td class="rs-table-link"><a href="{{ site.baseurl }}demos/auto_scale_details.html">{{ server[1].name }}</a></td>
               <td class="rs-table-text">{{ server[1].servers }}</td>
               <td class="rs-table-text">{{ server[1].region }}</td>
             </tr>
