--- a/html/demos/index.html
+++ b/html/demos/index.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: demos
 title: Cloud Servers
 servers:
   1:
@@ -99,7 +99,7 @@ statuses:
                   </ul>
                 </div>
               </td>
-              <td class="rs-table-link"><a href="{{ site.baseurl }}/details.html">{{ server[1].name }}</a></td>
+              <td class="rs-table-link"><a href="{{ site.baseurl }}demos/details.html">{{ server[1].name }}</a></td>
               <td class="rs-table-text">{{ server[1].ip }}</td>
               <td class="rs-table-status-list">
               <ul class="rs-status-list">
