Added file input types: url, email, search

--- a/examples/screenshots/form.html
+++ b/examples/screenshots/form.html
@@ -105,6 +105,14 @@
       <textarea class="rs-input-xlarge"></textarea><br>
       <textarea class="rs-input-xxlarge"></textarea><br>
     </fieldset>
+    <fieldset>
+      <legend>Input Types</legend>
+      <input type="text" value="text"><br>
+      <input type="password" value="password"><br>
+      <input type="email" value="email"><br>
+      <input type="search" value="search"><br>
+      <input type="url" value="url"><br>
+    </fieldset>
   </form>
 </body>
 </html>
