[New Feature][Heartbeat] Replaces static row styles with heartbeat animation classes on list-table.html screenshot

--- a/examples/screenshots/list-table.html
+++ b/examples/screenshots/list-table.html
@@ -598,7 +598,7 @@
               </ul>
             </td>
           </tr>
-          <tr class="rs-status-ok">
+          <tr>
             <td class="rs-table-status rs-table-status-ok"></td>
             <td class="rs-table-checkbox"></td>
             <td class="rs-table-cog"></td>
@@ -611,7 +611,7 @@
             <td class="rs-table-text">Body</td>
             <td class="rs-table-text"><button type="button" class="rs-plus"></button></td>
           </tr>
-          <tr class="rs-status-ok hover">
+          <tr>
             <td class="rs-table-status rs-table-status-ok"></td>
             <td class="rs-table-checkbox"></td>
             <td class="rs-table-cog"></td>
@@ -624,7 +624,7 @@
             <td class="rs-table-text">Body</td>
             <td class="rs-table-text"><button type="button" class="rs-plus"></button></td>
           </tr>
-          <tr class="rs-status-warning">
+          <tr>
             <td class="rs-table-status rs-table-status-warning"></td>
             <td class="rs-table-checkbox"></td>
             <td class="rs-table-cog"></td>
@@ -637,7 +637,7 @@
             <td class="rs-table-text">Body</td>
             <td class="rs-table-text"><button type="button" class="rs-plus"></button></td>
           </tr>
-          <tr class="rs-status-warning hover">
+          <tr class="">
             <td class="rs-table-status rs-table-status-warning"></td>
             <td class="rs-table-checkbox"></td>
             <td class="rs-table-cog"></td>
@@ -650,7 +650,7 @@
             <td class="rs-table-text">Body</td>
             <td class="rs-table-text"><button type="button" class="rs-plus"></button></td>
           </tr>
-          <tr class="rs-status-error">
+          <tr class="">
             <td class="rs-table-status rs-table-status-error"></td>
             <td class="rs-table-checkbox"></td>
             <td class="rs-table-cog"></td>
@@ -663,7 +663,7 @@
             <td class="rs-table-text">Body</td>
             <td class="rs-table-text"><button type="button" class="rs-plus"></button></td>
           </tr>
-          <tr class="rs-status-error hover">
+          <tr class="rs-heartbeat-ok">
             <td class="rs-table-status rs-table-status-error"></td>
             <td class="rs-table-checkbox"></td>
             <td class="rs-table-cog"></td>
@@ -676,8 +676,8 @@
             <td class="rs-table-text">Body</td>
             <td class="rs-table-text"><button type="button" class="rs-plus"></button></td>
           </tr>
-          <tr class="selected">
-            <td class="rs-table-status rs-table-status-ok"></td>
+          <tr class="rs-heartbeat-warning">
+            <td class="rs-table-status rs-table-status-error"></td>
             <td class="rs-table-checkbox"></td>
             <td class="rs-table-cog"></td>
             <td class="rs-table-radio"></td>
@@ -689,7 +689,7 @@
             <td class="rs-table-text">Body</td>
             <td class="rs-table-text"><button type="button" class="rs-plus"></button></td>
           </tr>
-          <tr class="selected hover">
+          <tr class="rs-heartbeat-error">
             <td class="rs-table-status rs-table-status-error"></td>
             <td class="rs-table-checkbox"></td>
             <td class="rs-table-cog"></td>
