[New Feature][Heartbeat] Cleans up table example

--- a/examples/screenshots/list-table.html
+++ b/examples/screenshots/list-table.html
@@ -598,78 +598,13 @@
               </ul>
             </td>
           </tr>
-          <tr>
-            <td class="rs-table-status rs-table-status-ok"></td>
-            <td class="rs-table-checkbox"></td>
-            <td class="rs-table-cog"></td>
-            <td class="rs-table-radio"></td>
-            <td class="rs-table-delete"></td>
-            <td class="rs-table-text">Row Status Ok</td>
-            <td class="rs-table-text">Body</td>
-            <td class="rs-table-text">Body</td>
-            <td class="rs-table-text">Body</td>
-            <td class="rs-table-text">Body</td>
-            <td class="rs-table-text"><button type="button" class="rs-plus"></button></td>
-          </tr>
-          <tr>
-            <td class="rs-table-status rs-table-status-ok"></td>
-            <td class="rs-table-checkbox"></td>
-            <td class="rs-table-cog"></td>
-            <td class="rs-table-radio"></td>
-            <td class="rs-table-delete"></td>
-            <td class="rs-table-text">Row Status Ok Hover</td>
-            <td class="rs-table-text">Body</td>
-            <td class="rs-table-text">Body</td>
-            <td class="rs-table-text">Body</td>
-            <td class="rs-table-text">Body</td>
-            <td class="rs-table-text"><button type="button" class="rs-plus"></button></td>
-          </tr>
-          <tr>
-            <td class="rs-table-status rs-table-status-warning"></td>
-            <td class="rs-table-checkbox"></td>
-            <td class="rs-table-cog"></td>
-            <td class="rs-table-radio"></td>
-            <td class="rs-table-delete"></td>
-            <td class="rs-table-text">Row Status Warning</td>
-            <td class="rs-table-text">Body</td>
-            <td class="rs-table-text">Body</td>
-            <td class="rs-table-text">Body</td>
-            <td class="rs-table-text">Body</td>
-            <td class="rs-table-text"><button type="button" class="rs-plus"></button></td>
-          </tr>
-          <tr class="">
-            <td class="rs-table-status rs-table-status-warning"></td>
-            <td class="rs-table-checkbox"></td>
-            <td class="rs-table-cog"></td>
-            <td class="rs-table-radio"></td>
-            <td class="rs-table-delete"></td>
-            <td class="rs-table-text">Row Status Warning Hover</td>
-            <td class="rs-table-text">Body</td>
-            <td class="rs-table-text">Body</td>
-            <td class="rs-table-text">Body</td>
-            <td class="rs-table-text">Body</td>
-            <td class="rs-table-text"><button type="button" class="rs-plus"></button></td>
-          </tr>
-          <tr class="">
-            <td class="rs-table-status rs-table-status-error"></td>
-            <td class="rs-table-checkbox"></td>
-            <td class="rs-table-cog"></td>
-            <td class="rs-table-radio"></td>
-            <td class="rs-table-delete"></td>
-            <td class="rs-table-text">Row Status Error</td>
-            <td class="rs-table-text">Body</td>
-            <td class="rs-table-text">Body</td>
-            <td class="rs-table-text">Body</td>
-            <td class="rs-table-text">Body</td>
-            <td class="rs-table-text"><button type="button" class="rs-plus"></button></td>
-          </tr>
           <tr class="rs-heartbeat-ok">
-            <td class="rs-table-status rs-table-status-error"></td>
+            <td class="rs-table-status rs-table-status-ok"></td>
             <td class="rs-table-checkbox"></td>
             <td class="rs-table-cog"></td>
             <td class="rs-table-radio"></td>
             <td class="rs-table-delete"></td>
-            <td class="rs-table-text">Row Status Error Hover</td>
+            <td class="rs-table-text">Heartbeat Ok</td>
             <td class="rs-table-text">Body</td>
             <td class="rs-table-text">Body</td>
             <td class="rs-table-text">Body</td>
@@ -677,12 +612,12 @@
             <td class="rs-table-text"><button type="button" class="rs-plus"></button></td>
           </tr>
           <tr class="rs-heartbeat-warning">
-            <td class="rs-table-status rs-table-status-error"></td>
+            <td class="rs-table-status rs-table-status-ok"></td>
             <td class="rs-table-checkbox"></td>
             <td class="rs-table-cog"></td>
             <td class="rs-table-radio"></td>
             <td class="rs-table-delete"></td>
-            <td class="rs-table-text">Row Selected</td>
+            <td class="rs-table-text">Heartbeat Warning</td>
             <td class="rs-table-text">Body</td>
             <td class="rs-table-text">Body</td>
             <td class="rs-table-text">Body</td>
@@ -690,12 +625,12 @@
             <td class="rs-table-text"><button type="button" class="rs-plus"></button></td>
           </tr>
           <tr class="rs-heartbeat-error">
-            <td class="rs-table-status rs-table-status-error"></td>
+            <td class="rs-table-status rs-table-status-ok"></td>
             <td class="rs-table-checkbox"></td>
             <td class="rs-table-cog"></td>
             <td class="rs-table-radio"></td>
             <td class="rs-table-delete"></td>
-            <td class="rs-table-text">Row Selected Hover</td>
+            <td class="rs-table-text">Heartbeat Error</td>
             <td class="rs-table-text">Body</td>
             <td class="rs-table-text">Body</td>
             <td class="rs-table-text">Body</td>
