[New Feature][Progress Bar - Blue] Adds screenshot example of blue progress bar

--- a/examples/screenshots/progress-bar.html
+++ b/examples/screenshots/progress-bar.html
@@ -10,21 +10,146 @@
 </head>
 <body style="background: #fff;">
   <div style="width: 500px; margin: 0 auto; padding: 40px;">
+    
+
+    <h2>Blue - Info</h2>
+
+    <h4>Normal</h4>
     <div class="rs-progress">
       <div class="rs-progress-inner">
-        <div class="rs-segment" style="width: 30%">
+        <div class="rs-segment" style="width: 50%">
+          <div class="rs-bar rs-bar-info"></div>
+        </div>
+      </div>
+    </div>
+
+    <br>
+
+    <h4>Sizes with trailing labels</h4>
+
+    <div class="rs-progress rs-progress-xsmall">
+      <div class="rs-progress-inner">
+        <div class="rs-segment" style="width: 50%">
+          <div class="rs-bar rs-bar-info"></div>
+        </div>
+      </div>
+      <span class="rs-progress-label">xSmall</span>
+    </div>
+
+    <div class="rs-progress rs-progress-small">
+      <div class="rs-progress-inner">
+        <div class="rs-segment" style="width: 50%">
+          <div class="rs-bar rs-bar-info"></div>
+        </div>
+      </div>
+      <span class="rs-progress-label">Small</span>
+    </div>
+
+    <div class="rs-progress rs-progress-medium">
+      <div class="rs-progress-inner">
+        <div class="rs-segment" style="width: 50%">
+          <div class="rs-bar rs-bar-info"></div>
+        </div>
+      </div>
+      <span class="rs-progress-label">Medium</span>
+    </div>
+
+    <div class="rs-progress rs-progress-large">
+      <div class="rs-progress-inner">
+        <div class="rs-segment" style="width: 50%">
+          <div class="rs-bar rs-bar-info"></div>
+        </div>
+      </div>
+      <span class="rs-progress-label">Large</span>
+    </div>
+
+    <div class="rs-progress rs-progress-xlarge">
+      <div class="rs-progress-inner">
+        <div class="rs-segment" style="width: 50%">
+          <div class="rs-bar rs-bar-info"></div>
+        </div>
+      </div>
+      <span class="rs-progress-label">xLarge</span>
+    </div>
+
+    <br>
+
+    <h4>Stacked Progress with Label</h4>
+
+    <div class="rs-progress rs-progress-xsmall rs-progress-stack">
+      <div class="rs-progress-inner">
+        <div class="rs-segment" style="width: 50%">
+          <div class="rs-bar rs-bar-info"></div>
+        </div>
+      </div>
+      <div class="rs-progress-inner">
+        <div class="rs-segment" style="width: 50%">
+          <div class="rs-bar rs-bar-info"></div>
+        </div>
+      </div>
+      <div class="rs-progress-inner">
+        <div class="rs-segment" style="width: 50%">
+          <div class="rs-bar rs-bar-info"></div>
+        </div>
+      </div>
+      <div class="rs-progress-inner">
+        <div class="rs-segment" style="width: 50%">
+          <div class="rs-bar rs-bar-info"></div>
+        </div>
+      </div>
+      <span class="rs-progress-label">xSmall</span>
+    </div>
+
+    <br><hr><br>
+
+    <h2>Green - Ok</h2>
+    <h4>Normal</h4>
+    <div class="rs-progress">
+      <div class="rs-progress-inner">
+        <div class="rs-segment" style="width: 50%">
           <div class="rs-bar rs-bar-ok"></div>
         </div>
       </div>
     </div>
 
+    <br>
+
+    <h4>Working</h4>
     <div class="rs-progress">
       <div class="rs-progress-inner">
-        <div class="rs-segment" style="width: 40%">
+        <div class="rs-segment" style="width: 50%">
           <div class="rs-bar rs-bar-ok rs-bar-striped"></div>
         </div>
       </div>
     </div>
+
+    <br>
+
+    <h4>Multi-Step</h4>
+
+    <div class="rs-progress">
+      <div class="rs-progress-inner">
+        <div class="rs-segment" style="width: 25%">
+          <div class="rs-bar rs-bar-ok"></div>
+          <div class="rs-caption">Step One</div>
+        </div>
+        <div class="rs-segment" style="width: 35%">
+          <div class="rs-bar rs-bar-ok"></div>
+          <div class="rs-caption">Step Two</div>
+        </div>
+        <div class="rs-segment" style="width: 40%">
+          <div class="rs-bar rs-bar-ok rs-bar-striped"></div>
+          <div class="rs-caption">Step Three</div>
+        </div>
+      </div>
+    </div>
+
+    <br><hr><br>
+
+
+    <h2>Orange - Processing</h2>
+
+    <h4>Normal</h4>
 
     <div class="rs-progress">
       <div class="rs-progress-inner">
@@ -34,46 +159,37 @@
       </div>
     </div>
 
+    <br>
+    <h4>Working</h4>
+
+
     <div class="rs-progress">
       <div class="rs-progress-inner">
-        <div class="rs-segment" style="width: 60%">
+        <div class="rs-segment" style="width: 50%">
           <div class="rs-bar rs-bar-processing rs-bar-striped"></div>
         </div>
       </div>
     </div>
 
-    <div class="rs-progress">
-      <div class="rs-progress-inner">
-        <div class="rs-segment" style="width: 20%">
-          <div class="rs-bar rs-bar-ok"></div>
-          <div class="rs-caption">Step One</div>
-        </div>
-        <div class="rs-segment" style="width: 40%">
-          <div class="rs-bar rs-bar-ok"></div>
-          <div class="rs-caption">Step Two</div>
-        </div>
-        <div class="rs-segment" style="width: 30%">
-          <div class="rs-bar rs-bar-ok rs-bar-striped"></div>
-          <div class="rs-caption">Step Three</div>
-        </div>
-      </div>
-    </div>
 
+    <br>
+
+    <h4>Multi-Step</h4>
     <div class="rs-progress">
       <div class="rs-progress-inner">
-        <div class="rs-segment" style="width: 20%">
+        <div class="rs-segment" style="width: 25%">
           <div class="rs-bar rs-bar-processing"></div>
           <div class="rs-caption">Step One</div>
         </div>
-        <div class="rs-segment" style="width: 40%">
+        <div class="rs-segment" style="width: 25%">
           <div class="rs-bar rs-bar-processing"></div>
           <div class="rs-caption">Step Two</div>
         </div>
-        <div class="rs-segment" style="width: 30%">
+        <div class="rs-segment" style="width: 25%">
           <div class="rs-bar rs-bar-processing rs-bar-striped"></div>
           <div class="rs-caption">Step Three</div>
         </div>
-        <div class="rs-segment" style="width: 10%">
+        <div class="rs-segment" style="width: 25%">
           <div class="rs-bar"></div>
           <div class="rs-caption">Step Four</div>
         </div>
