Demo for generic progress labels.

--- a/examples/screenshots/progress-bar.html
+++ b/examples/screenshots/progress-bar.html
@@ -57,13 +57,16 @@
 
     <h4>Sizes with trailing label</h4>
 
-    <div class="rs-progress rs-progress-xsmall">
-      <div class="rs-progress-inner">
-        <div class="rs-segment" style="width: 50%">
-          <div class="rs-bar rs-status-ok"></div>
+    <div class="wrapper">
+      <span>xSmall Before</span>
+      <div class="rs-progress rs-progress-xsmall">
+        <div class="rs-progress-inner">
+          <div class="rs-segment" style="width: 50%">
+            <div class="rs-bar rs-status-ok"></div>
+          </div>
         </div>
       </div>
-      <span class="rs-progress-label">xSmall</span>
+      <span>xSmall After</span>
     </div>
 
     <br>
@@ -626,7 +629,7 @@
         </div>
       </div>
       <span class="rs-progress-label">xLarge</span>
-    </div>    
+    </div>
 
   </div>
 </body>
